@@ -17,12 +17,11 @@
  */
 package de.tudarmstadt.ukp.inception.annotation.layer.chain;
 
-import static de.tudarmstadt.ukp.clarin.webanno.support.WebAnnoConst.COREFERENCE_RELATION_FEATURE;
-import static de.tudarmstadt.ukp.clarin.webanno.support.WebAnnoConst.COREFERENCE_TYPE_FEATURE;
-import static de.tudarmstadt.ukp.inception.schema.adapter.TypeUtil.getUiLabelText;
+import static de.tudarmstadt.ukp.inception.schema.api.feature.TypeUtil.getUiLabelText;
+import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.COREFERENCE_RELATION_FEATURE;
+import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.COREFERENCE_TYPE_FEATURE;
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.apache.uima.cas.text.AnnotationPredicates.overlapping;
 
 import java.util.ArrayList;
@@ -49,8 +48,8 @@ import de.tudarmstadt.ukp.inception.rendering.vmodel.VID;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.VObject;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.VRange;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.VSpan;
-import de.tudarmstadt.ukp.inception.schema.feature.FeatureSupportRegistry;
-import de.tudarmstadt.ukp.inception.schema.layer.LayerSupportRegistry;
+import de.tudarmstadt.ukp.inception.schema.api.feature.FeatureSupportRegistry;
+import de.tudarmstadt.ukp.inception.schema.api.layer.LayerSupportRegistry;
 
 public class ChainRenderer
     extends Renderer_ImplBase<ChainAdapter>
@@ -78,7 +77,7 @@ public class ChainRenderer
     @Override
     protected boolean typeSystemInit(TypeSystem aTypeSystem)
     {
-        ChainAdapter typeAdapter = getTypeAdapter();
+        var typeAdapter = getTypeAdapter();
         chainType = aTypeSystem.getType(typeAdapter.getChainTypeName());
 
         if (chainType == null) {
@@ -95,10 +94,10 @@ public class ChainRenderer
     @Override
     public List<AnnotationFS> selectAnnotationsInWindow(CAS aCas, int aWindowBegin, int aWindowEnd)
     {
-        ChainAdapter typeAdapter = getTypeAdapter();
+        var typeAdapter = getTypeAdapter();
         return aCas.select(typeAdapter.getAnnotationTypeName()) //
                 .map(a -> (AnnotationFS) a) //
-                .collect(toList());
+                .toList();
     }
 
     @Override
@@ -109,7 +108,7 @@ public class ChainRenderer
             return;
         }
 
-        ChainAdapter typeAdapter = getTypeAdapter();
+        var typeAdapter = getTypeAdapter();
 
         // Find the features for the arc and span labels - it is possible that we do not find a
         // feature for arc/span labels because they may have been disabled.
@@ -170,8 +169,6 @@ public class ChainRenderer
                             label);
                     annoToSpanIdx.put(linkFs, span);
                     aResponse.add(span);
-
-                    renderLazyDetails(linkFs, span, aFeatures);
                 }
 
                 // Render arc (we do this on prevLinkFs because then we easily know that the current
