@@ -18,17 +18,17 @@
 package de.tudarmstadt.ukp.inception.ui.core.docanno.layer;
 
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
 import org.apache.uima.cas.CAS;
-import org.apache.uima.resource.metadata.TypeDescription;
 import org.apache.uima.resource.metadata.TypeSystemDescription;
 import org.apache.wicket.markup.html.panel.Panel;
 import org.apache.wicket.model.IModel;
+import org.apache.wicket.validation.ValidationError;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
@@ -37,9 +37,9 @@ import de.tudarmstadt.ukp.clarin.webanno.api.annotation.rendering.NopRenderer;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
 import de.tudarmstadt.ukp.inception.rendering.Renderer;
-import de.tudarmstadt.ukp.inception.schema.feature.FeatureSupportRegistry;
-import de.tudarmstadt.ukp.inception.schema.layer.LayerSupport_ImplBase;
-import de.tudarmstadt.ukp.inception.schema.layer.LayerType;
+import de.tudarmstadt.ukp.inception.schema.api.feature.FeatureSupportRegistry;
+import de.tudarmstadt.ukp.inception.schema.api.layer.LayerSupport_ImplBase;
+import de.tudarmstadt.ukp.inception.schema.api.layer.LayerType;
 import de.tudarmstadt.ukp.inception.ui.core.docanno.config.DocumentMetadataLayerSupportAutoConfiguration;
 import de.tudarmstadt.ukp.inception.ui.core.docanno.config.DocumentMetadataLayerSupportProperties;
 
@@ -54,6 +54,8 @@ public class DocumentMetadataLayerSupport
     extends LayerSupport_ImplBase<DocumentMetadataLayerAdapter, DocumentMetadataLayerTraits>
     implements InitializingBean
 {
+    public static final String FEATURE_NAME_ORDER = "i7n_uiOrder";
+
     public static final String TYPE = "document-metadata";
 
     private final ApplicationEventPublisher eventPublisher;
@@ -107,22 +109,23 @@ public class DocumentMetadataLayerSupport
     public DocumentMetadataLayerAdapter createAdapter(AnnotationLayer aLayer,
             Supplier<Collection<AnnotationFeature>> aFeatures)
     {
-        DocumentMetadataLayerAdapter adapter = new DocumentMetadataLayerAdapter(
-                getLayerSupportRegistry(), featureSupportRegistry, eventPublisher, aLayer,
-                aFeatures);
-
-        return adapter;
+        return new DocumentMetadataLayerAdapter(getLayerSupportRegistry(), featureSupportRegistry,
+                eventPublisher, aLayer, aFeatures);
     }
 
     @Override
     public void generateTypes(TypeSystemDescription aTsd, AnnotationLayer aLayer,
             List<AnnotationFeature> aAllFeaturesInProject)
     {
-        TypeDescription td = aTsd.addType(aLayer.getName(), "", CAS.TYPE_NAME_ANNOTATION_BASE);
+        var td = aTsd.addType(aLayer.getName(), "", CAS.TYPE_NAME_ANNOTATION_BASE);
 
-        List<AnnotationFeature> featureForLayer = aAllFeaturesInProject.stream()
-                .filter(feature -> aLayer.equals(feature.getLayer())).collect(toList());
-        generateFeatures(aTsd, td, featureForLayer);
+        td.addFeature(FEATURE_NAME_ORDER, "", CAS.TYPE_NAME_INTEGER);
+
+        var featuresForLayer = aAllFeaturesInProject.stream() //
+                .filter(feature -> aLayer.equals(feature.getLayer())) //
+                .toList();
+
+        generateFeatures(aTsd, td, featuresForLayer);
     }
 
     @Override
@@ -136,7 +139,7 @@ public class DocumentMetadataLayerSupport
     @Override
     public Panel createTraitsEditor(String aId, IModel<AnnotationLayer> aLayerModel)
     {
-        AnnotationLayer layer = aLayerModel.getObject();
+        var layer = aLayerModel.getObject();
 
         if (!accepts(layer)) {
             throw unsupportedLayerTypeException(layer);
@@ -149,5 +152,17 @@ public class DocumentMetadataLayerSupport
     public DocumentMetadataLayerTraits createTraits()
     {
         return new DocumentMetadataLayerTraits();
+    }
+
+    @Override
+    public List<ValidationError> validateFeatureName(AnnotationFeature aFeature)
+    {
+        var name = aFeature.getName();
+        if (name.equals(FEATURE_NAME_ORDER)) {
+            return asList(new ValidationError("[" + name + "] is a reserved feature name on "
+                    + "document metadata layers. Please use a different name for the feature."));
+        }
+
+        return Collections.emptyList();
     }
 }
