@@ -17,13 +17,15 @@
  */
 package de.tudarmstadt.ukp.inception.log.config;
 
+import java.util.Collections;
 import java.util.Set;
 
 import org.springframework.boot.availability.AvailabilityChangeEvent;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 
-import de.tudarmstadt.ukp.clarin.webanno.api.event.AfterCasWrittenEvent;
 import de.tudarmstadt.ukp.inception.annotation.events.BeforeDocumentOpenedEvent;
+import de.tudarmstadt.ukp.inception.annotation.events.PreparingToOpenDocumentEvent;
+import de.tudarmstadt.ukp.inception.documents.event.AfterCasWrittenEvent;
 
 @ConfigurationProperties("event-logging")
 public class EventLoggingPropertiesImpl
@@ -31,12 +33,14 @@ public class EventLoggingPropertiesImpl
 {
     private boolean enabled;
 
-    private Set<String> excludeEvents = Set.of( //
-            // Do not log this by default - hardly any information value
+    private Set<String> includePatterns = Collections.emptySet(); // Default include everything
+
+    private Set<String> excludePatterns = Set.of( //
             AfterCasWrittenEvent.class.getSimpleName(), //
             AvailabilityChangeEvent.class.getSimpleName(), //
             "RecommenderTaskNotificationEvent", //
             BeforeDocumentOpenedEvent.class.getSimpleName(), //
+            PreparingToOpenDocumentEvent.class.getSimpleName(), //
             "BrokerAvailabilityEvent", //
             "ShutdownDialogAvailableEvent");
 
@@ -53,14 +57,26 @@ public class EventLoggingPropertiesImpl
     }
 
     @Override
-    public Set<String> getExcludeEvents()
+    public Set<String> getIncludePatterns()
     {
-        return excludeEvents;
+        return includePatterns;
     }
 
     @Override
-    public void setExcludeEvents(Set<String> aExcludeEvents)
+    public void setIncludePatterns(Set<String> aIncludePatterns)
     {
-        excludeEvents = aExcludeEvents;
+        this.includePatterns = aIncludePatterns;
+    }
+
+    @Override
+    public Set<String> getExcludePatterns()
+    {
+        return excludePatterns;
+    }
+
+    @Override
+    public void setExcludePatterns(Set<String> aExcludePatterns)
+    {
+        this.excludePatterns = aExcludePatterns;
     }
 }
