@@ -32,7 +32,6 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
-import org.apache.uima.cas.CAS;
 import org.apache.wicket.MarkupContainer;
 import org.apache.wicket.core.request.handler.IPartialPageRequestHandler;
 import org.apache.wicket.feedback.IFeedback;
@@ -46,7 +45,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
-import de.tudarmstadt.ukp.clarin.webanno.support.wicket.WicketUtil;
 import de.tudarmstadt.ukp.inception.annotation.feature.string.KendoChoiceDescriptionScriptReference;
 import de.tudarmstadt.ukp.inception.conceptlinking.config.EntityLinkingProperties;
 import de.tudarmstadt.ukp.inception.conceptlinking.service.ConceptLinkingService;
@@ -56,8 +54,9 @@ import de.tudarmstadt.ukp.inception.kb.KnowledgeBaseService;
 import de.tudarmstadt.ukp.inception.kb.graph.KBHandle;
 import de.tudarmstadt.ukp.inception.rendering.editorstate.AnnotatorState;
 import de.tudarmstadt.ukp.inception.rendering.editorstate.FeatureState;
-import de.tudarmstadt.ukp.inception.schema.feature.FeatureEditor;
-import de.tudarmstadt.ukp.inception.schema.feature.FeatureSupportRegistry;
+import de.tudarmstadt.ukp.inception.schema.api.feature.FeatureEditor;
+import de.tudarmstadt.ukp.inception.schema.api.feature.FeatureSupportRegistry;
+import de.tudarmstadt.ukp.inception.support.wicket.WicketUtil;
 
 /**
  * Component for editing knowledge-base-related features on annotations.
@@ -116,22 +115,22 @@ public abstract class ConceptFeatureEditor_ImplBase
         }
 
         // Extract exact match filter on the query
-        boolean labelFilter = false;
-        String trimmedInput = input.trim();
+        var labelFilter = false;
+        var trimmedInput = input.trim();
         if (trimmedInput.length() > 2 && trimmedInput.startsWith("\"")
                 && trimmedInput.endsWith("\"")) {
             input = StringUtils.substring(trimmedInput, 1, -1).trim();
             labelFilter = true;
         }
 
-        final String finalInput = input;
+        final var finalInput = input;
 
         List<KBHandle> choices;
         try {
-            AnnotationFeature feat = getModelObject().feature;
+            var feat = getModelObject().feature;
 
             var traits = readFeatureTraits(feat);
-            String repoId = traits.getRepositoryId();
+            var repoId = traits.getRepositoryId();
             // Check if kb is actually enabled
             if (!(repoId == null || kbService.isKnowledgeBaseEnabled(feat.getProject(), repoId))) {
                 return Collections.emptyList();
@@ -140,12 +139,23 @@ public abstract class ConceptFeatureEditor_ImplBase
             // If there is a selection, we try obtaining its text from the CAS and use it as an
             // additional item in the query. Note that there is not always a mention, e.g. when the
             // feature is used in a document-level annotations.
-            CAS cas = aHandler != null ? aHandler.getEditorCas() : null;
-            String mention = aStateModel != null ? aStateModel.getObject().getSelection().getText()
-                    : null;
-            int mentionBegin = aStateModel != null
-                    ? aStateModel.getObject().getSelection().getBegin()
-                    : -1;
+            var cas = aHandler != null ? aHandler.getEditorCas() : null;
+
+            String mention = null;
+            int mentionBegin = -1;
+
+            if (aStateModel != null) {
+                var selection = aStateModel.getObject().getSelection();
+                if (selection.isSpan()) {
+                    mention = selection.getText();
+                    mentionBegin = selection.getBegin();
+                }
+
+                if (selection.isArc()) {
+                    mention = selection.getOriginText() + " " + selection.getTargetText();
+                    mentionBegin = selection.getBegin();
+                }
+            }
 
             choices = clService.getLinkingInstancesInKBScope(traits.getRepositoryId(),
                     traits.getScope(), traits.getAllowedValueType(), finalInput, mention,
@@ -171,8 +181,7 @@ public abstract class ConceptFeatureEditor_ImplBase
         }
 
         var result = choices.stream()//
-                .limit(entityLinkingProperties.getCandidateDisplayLimit())
-                .collect(Collectors.toList());
+                .limit(entityLinkingProperties.getCandidateDisplayLimit()).toList();
 
         WicketUtil.serverTiming("getCandidates", currentTimeMillis() - startTime);
 
